src/objects/Meeting_Participant_MERC__c.object
<CustomObject>
    <fields>
        <fullName>Purpose_of_Payment_MERC__c</fullName>
        <description>Purpose of Payment will be &quot;Expenses&quot; if the Meeting Participant type is &quot;Delegate&quot; or &quot;Individual Sponsorship&quot;. Created to allow this value to be translated. Created 04/07/2014 by KLorenti, Mavens Consulting</description>
        <label>Purpose of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>Expenses</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Qualifications_Experience_Complete_MERC__c</fullName>
        <description>Used by portal. Pulled from Account to display whether Qualifications and Experience Step is complete for HCP Info Package. Created 04/03/2014 by KLorenti, Mavens Consulting</description>
        <formula>Account_MERC__r.Qualifications_Experience_Complete_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualifications and Experience Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RTI_Transaction_ID_MERC__c</fullName>
        <label>RTI Transaction ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_MERC__c</fullName>
        <description>Returns the Record Type display name.</description>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Name_MERC__c</fullName>
        <description>Used by AODS to determine at which level the ToV should be obtained from.  For individual sponsorship or consulting services this will be participant level.  For anything else this will be from the Daily Attendance &amp; ToV object. Oliver Dunford 3rd Feb 2014.</description>
        <formula>RecordType.DeveloperName</formula>
        <label>Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Comments_MERC__c</fullName>
        <description>Records registration comments of the Meeting Participant. Created by John A Adams 3/19/2014</description>
        <label>Registration Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Require_Congress_Registration_MERC__c</fullName>
        <description>Captures whether a HCP has congress registration details for Independent Meetings : MERC : Created on 21/07/2014 by Oliver Dunford, Mavens Consulting</description>
        <label>Require Congress Registration</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SEA_WO_Follow_Up_Date_MERC__c</fullName>
        <description>Stamped by Process Builder/Flow for Contact Status Updates : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>SEA/WO Follow Up Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEA_WO_Received_Date_MERC__c</fullName>
        <description>Stamped by Process Builder/Flow for Contact Status Updates : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>SEA/WO Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEA_WO_Sent_Date_MERC__c</fullName>
        <description>Stamped by Process Builder/Flow for Contact Status Updates : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>SEA/WO Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SEA_WO_Signed_Date_Time_MERC__c</fullName>
        <description>Stamped by Process Builder/Flow for Contact Status Updates : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>SEA/WO Signed Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SEA_WO_Status_MERC__c</fullName>
        <description>Stamped by Process Builder/Flow for Contact Status Updates : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>SEA/WO Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_MERC__c</fullName>
        <description>Sales Rep will be Stamped on Meeting Participant when a Meeting Participant is added in Veeva and sent through to Mercury via integration. Created 01/14/2014 by Klorenti, Mavens Consulting</description>
        <label>Customer Facing User</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_HCP_Info_Package_to_Rep__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When the Rep will deliver the HCP Info Package in Person, this field will be set to ensure they receive the Info Package and not the HCP - set via Veeva to Mercury Interface. Oliver Dunford 10th Jan.</description>
        <inlineHelpText>Diverts paper information package to Meeting Owner, not HCP.</inlineHelpText>
        <label>Send HCP Info Package to Meeting Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Provider_Tier_MERC__c</fullName>
        <description>Pulls the Service Provider Tier from the HCP Profile. Oliver Dunford 5th Nov 2013.</description>
        <formula>Account_MERC__r.Service_Provider_Tier_MERC__c</formula>
        <label>Service Provider Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Rendered_MERC__c</fullName>
        <description>Allows Mercury Owner to confirm that speaker rendered contractual services.
Created by John A Adams 10/24/2013</description>
        <inlineHelpText>This must only be selected once services has been complete.</inlineHelpText>
        <label>Services Rendered</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_MERC__c</fullName>
        <defaultValue>&quot;Mercury&quot;</defaultValue>
        <description>Initial source of the information. The Veeva Interface will stamp Veeva as the Source if the Meeting or Meeting Participant comes from Veeva and not Mercury. This is needed for the AODS interface.
Created by John A Adams 1/7/2014</description>
        <label>Source</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speaking_MERC__c</fullName>
        <description>Used by Portal to identity service provider as a speaker for a meeting. John Lorenti 2014-03-12</description>
        <formula>AND(RecordType.DeveloperName != &apos;MERC_Delegate&apos;, OR(
ISPICKVAL( Types_of_Service_MERC__c , &apos;Speaking - Speaker&apos;),
ISPICKVAL( Types_of_Service_MERC__c , &apos;Speaking - Chairman Meeting&apos;)
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speaking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Speciality_MERC__c</fullName>
        <description>Displays Speciality from Account Object. Created 10/25/2013 by KLorenti, Mavens Consulting</description>
        <formula>Account_MERC__r.Spclty_Desc_GLBL__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Speciality</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Agreement_Consent_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by portal. Indicates when Meeting Participant has consented to Sponsorship Agreement. Created 04/03/2014 by KLorenti, Mavens Consulting</description>
        <inlineHelpText>Checked by CMS if a paper copy of the Sponsorship Package has been received.  The agreement should also be uploaded against the Meeting Participant.  This will complete this step for the HCP in the RSVP section of the web service.</inlineHelpText>
        <label>Sponsorship Agreement Consent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Wet_Signature_Acknowled_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Captures the acknowledgment by the HCP that a wet signature will be required for Sponsorship Agreement, this is not the consent : MERC : Created on 22/07/2014 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Web Service acknowledgment that the HCP knows that a wet signature is required.</inlineHelpText>
        <label>Sponsorship Wet Signature Acknowledged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sponsorship_Wet_Signature_Received_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by the Web Service to determine whether the RSVP process can proceed, also used by Local and CMS Cork to indicate the document has been received and attached : MERC : Created on 05/08/2014 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Should be checked upon receiving and uploading a sponsorship agreement from those affiliates that require a wet signature.</inlineHelpText>
        <label>Sponsorship Wet Signature Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_Change_Post_ToV_Final_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Participant Status changes to No Show post an initial data send to AODS.  Registration ToV may need to be corrected back to 0.00. Oliver Dunford 17th Jun 2014.</description>
        <label>Status Change Post ToV Final</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status_MERC__c</fullName>
        <description>Status of Participant. Created 9/28/2013 by KLorenti</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Approval</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested in Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Payment_Date_MERC__c</fullName>
        <description>Stores the Invoice Information populated via Process Builder for parties without Invoice access : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Includes Fees and/or Expenses</inlineHelpText>
        <label>Submitted for Payment Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_for_Payment_MERC__c</fullName>
        <description>Stores the Invoice Information populated via Process Builder for parties without Invoice access : MERC : Created on 20/04/2015 by Oliver Dunford, Mavens Consulting</description>
        <inlineHelpText>Includes Fees and/or Expenses</inlineHelpText>
        <label>Submitted for Payment</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Step_Complete_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by portal. Indicates when Meeting Participant has completed the Summary Step during meeting registration. Created 04/16/2014 by KLorenti, Mavens Consulting</description>
        <label>Summary Step Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ToV_Currency_MERC__c</fullName>
        <description>Pulls down the Currency of the Meeting.  This is the currency in which all ToV will be entered and reported. Oliver Dunford 4th June 2014.</description>
        <formula>TEXT(Meeting_MERC__r.CurrencyIsoCode)</formula>
        <inlineHelpText>ToV Currency reflects the currency of the meeting, all ToV should be entered in the currency of the meeting.  The Service Provider Fee can be managed in a different currency. This can be set by editing the record and changing the Currency field.</inlineHelpText>
        <label>ToV Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Topic_Area_MERC__c</fullName>
        <description>The topic area chosen by the Service Provider.  Oliver Dunford. 5th Nov 2013.</description>
        <inlineHelpText>Name of presentation or service.</inlineHelpText>
        <label>Topic Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Total_Food_Beverage_ToV_MERC__c</fullName>
        <description>Stores total ToV for Food and Beverage . Oliver Dunford 10/10/2013</description>
        <label>Total Food &amp; Beverage ToV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Food_Beverage_ToV_Rollup_MERC__c</fullName>
        <description>The value stores the Declarative rollup summary value when rolled up from the meeting participant. This is a raw currency value and represents the value in euros. A trigger will convert this value to the meeting currency and store it in Total Food Beverage ToV.

K. Thornton 11 Jun 2015</description>
        <label>Total Food Beverage ToV Rollup</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Ground_Transporation_ToV_MERC__c</fullName>
        <description>Stores Total ToV for group ground transportation cost. Oliver Dunford 10/10/2013</description>
        <label>Total Group Ground Transport ToV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Ground_Transport_ToV_Rollup_MERC__c</fullName>
        <description>The value stores the Declarative rollup summary value when rolled up from the meeting participant. This is a raw currency value and represents the value in euros. A trigger will convert this value to the meeting currency and store it in Total Ground Transportation Tov. 



K. Thornton 11 Jun 2014</description>
        <label>Total Group Ground Transport ToV Rollup</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Honorarium_MERC__c</fullName>
        <description>Pulls in the Final Fee from the Meeting Participant record.  This is the final value for reference.  This is not picked up by AODS as the Honorarium is managed and picked up through SAP. Created by Oliver Dunford 4th November 2013.</description>
        <formula>Final_Fee_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Honorarium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Hotel_ToV_MERC__c</fullName>
        <description>Stores total ToV for Hotel cost. Oliver Dunford 10/10/2013</description>
        <label>Total Hotel ToV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hotel_ToV_Rollup_MERC__c</fullName>
        <description>The value stores the Declarative rollup summary value when rolled up from the meeting participant. This is a raw currency value and represents the value in euros. A trigger will convert this value to the meeting currency and store it in Total Hotel ToV.

K. Thornton 11 Jun 2015</description>
        <label>Total Hotel ToV Rollup</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_of_Service_MERC__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Calculated total hours of service based upon Preparation Time + Event Time.</description>
        <inlineHelpText>Based upon the Service Providers Preparation Time + Event Time.</inlineHelpText>
        <label>Total Hours of Service</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Indiv_Transport_ToV_Rollup_MERC__c</fullName>
        <description>The value stores the Declarative rollup summary value when rolled up from the meeting participant. This is a raw currency value and represents the value in euros. A trigger will convert this value to the meeting currency and store it in Total Individual Transportation Tov : MERC : Created on 19/01/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Total Individual Transport ToV Rollup</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Individual_Transport_ToV_MERC__c</fullName>
        <description>Stores total ToV for Individual Transport.  Rolls up from Daily Attendance &amp; ToV records but sourced initially from associated Travel Itinerary records : MERC : Created on 16/01/2015 by Oliver Dunford, Mavens Consulting</description>
        <label>Total Individual Transport ToV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Registration_ToV_MERC__c</fullName>
        <description>Stores total registration ToV. Oliver Dunford 10/10/2013</description>
        <label>Total Registration ToV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Registration_ToV_Rollup_MERC__c</fullName>
        <description>The value stores the Declarative rollup summary value when rolled up from the meeting participant. This is a raw currency value and represents the value in euros. A trigger will convert this value to the meeting currency and store it in Total Registration ToV.

K. Thornton 11 Jun 2015</description>
        <label>Total Registration ToV Rollup</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transparency_Reporting_Consent_MERC__c</fullName>
        <description>Displays Transparency Reporting Consent from the Account object (which original comes from Preferences and Consent). Created 03/14/2014 by KLorenti, Mavens Consulting</description>
        <formula>Account_MERC__r.Transparency_Reporting_Opt_Out_MERC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transparency Reporting Consent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transparency_Step_Complete_MERC__c</fullName>
        <description>Used by portal. Indicates when Meeting Participant has completed the step of Transparency Reporting Consent during meeting registration. Created 05/04/2014 by KLorenti, Mavens Consulting</description>
        <formula>IF( !ISBLANK(Account_MERC__r.Transparency_Reporting_Opt_Out_MERC__c), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transparency Reporting Step Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Adjustment_Amount_MERC__c</fullName>
        <description>Stamp with the amount of the Travel Adjustment. Created 01/08/2014 by KLorenti, Mavens Consulting</description>
        <label>Travel Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Travel_Adjustment_Percentage_MERC__c</fullName>
        <description>Display Percentage for Travel Adjustment. Created 01/06/2014 by KLorenti, Mavens Consulting</description>
        <formula>IF(ISPICKVAL(Travel_Time_Hrs_MERC__c,&quot;&quot;), 
(0), 

IF(ISPICKVAL(Travel_Time_Hrs_MERC__c,&quot;None&quot;), 
(0), 

IF(ISPICKVAL(Travel_Time_Hrs_MERC__c, &quot;0-2 hrs&quot;), 
(0), 

IF(ISPICKVAL(Travel_Time_Hrs_MERC__c, &quot;2-10 hrs&quot;), 
(0.20), 

IF(ISPICKVAL(Travel_Time_Hrs_MERC__c, &quot;11-20 hrs&quot;), 
(0.25), 

IF(ISPICKVAL(Travel_Time_Hrs_MERC__c, &quot;More than 20 hrs&quot;), 
(0.30), 0 
) 
) 
) 
) 
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Adjustment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Travel_No_Longer_Required_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used by portal to capture if Meeting Participant no longer requires travel, when Travel Required was originally set to Yes. Created 04/02/2014 by KLorenti, Mavens Consulting</description>
        <label>Was Travel offered and then declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Step_Complete_MERC__c</fullName>
        <description>Used by portal. Determines if Meeting Participant has completed Travel step when RSVP&apos;ing on the portal. Created 04/02/2014 by KLorenti, Mavens Consulting</description>
        <formula>IF(ISPICKVAL(Travel_by_Air_MERC__c,&quot;Yes&quot;) || ISPICKVAL(Travel_by_Bus_MERC__c,&quot;Yes&quot;) || ISPICKVAL(Travel_by_Car_MERC__c,&quot;Yes&quot;) ||  ISPICKVAL(Travel_by_Train_MERC__c,&quot;Yes&quot;) || ISPICKVAL( Air_Travel_No_Longer_Required_MERC__c ,&quot;Yes&quot;) || Travel_No_Longer_Required_MERC__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Travel Step Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Travel_Time_Hrs_MERC__c</fullName>
        <description>Travel Time Hours. Created 10/10/2013 by K Lorenti. Modified to Pick list by J Adams 10/17/2013
- None, no travel adjustment
– between 2 and 10 h triggers 20% travel adjustment in Fee
- 11 – 20h triggers 25%
- more than 20 h – 30%</description>
        <label>Travel Time (hrs)</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>0-2 hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-10 hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-20 hrs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 20 hrs</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_by_Air_MERC__c</fullName>
        <description>Records if the Meeting Participant traveling by Air : MERC : Created on 13/08/2014 by Oliver Dunford, Mavens Consulting</description>
        <label>Travel by Air</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_by_Bus_MERC__c</fullName>
        <description>Records if the Meeting Participant traveling by bus. Created by John A Adams 3/19/2014</description>
        <label>Travel by Bus</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_by_Car_MERC__c</fullName>
        <description>Records if the Meeting Participant traveling by car. Created by John A Adams 3/19/2014</description>
        <label>Travel by Car</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Travel_by_Train_MERC__c</fullName>
        <description>Records if the Meeting Participant traveling by train. Created by John A Adams 3/19/2014</description>
        <label>Travel by Train</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Trnsctn_Typ_MERC__c</fullName>
        <description>Indicates if the transaction is Cancelled, Ticketed, Passed_OC, or Booked
Created by John A Adams 12/12/2013</description>
        <label>Transaction Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trtry_Cd_MERC__c</fullName>
        <description>Territory Code of the Sales Rep will be stamped when the meeting participant is added by the Rep. Created 12/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Territory Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trtry_Desc_MERC__c</fullName>
        <description>Territory Description of the Sales Rep will be stamped when the meeting participant is added by the Rep. Created 12/18/2013 by KLorenti, Mavens Consulting</description>
        <label>Territory Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Contract_MERC__c</fullName>
        <description>Created to capture type of contract on Meeting Participant. Created 12/3/2013 by KLorenti, Mavens Consulting</description>
        <inlineHelpText>MSA is Master Service Agreement. If the HCP does not want to sign MSA, please select Single Event Contract.</inlineHelpText>
        <label>Type of Contract</label>
        <picklist>
            <picklistValues>
                <fullName>MSA</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Single Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Work Order</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Types_of_Service_MERC__c</fullName>
        <description>Type of Services a speaker may be providing. Moving from HCP Contract object. Created 11/19/2013 by KLorenti, Mavens Consulting.</description>
        <inlineHelpText>By selecting this value, I confirm that this person has relevant experience on the topic and is well respected and influential within the local community</inlineHelpText>
        <label>Type of Service</label>
        <picklist>
            <picklistValues>
                <fullName>Speaking - Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaking - Chairman Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board - Chairman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory Board - Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Research Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expenses</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Validation_Complete_MERC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A check box that can be checked when response for the validation has been received.</description>
        <inlineHelpText>Check this box when all validation activities are complete, any Designated Individuals information is updated and Notification may begin.</inlineHelpText>
        <label>Validation Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Video_Audio_Recording_MERC__c</fullName>
        <description>Is record consent needed for the meeting? Oliver Dunford 5th Nov 2013</description>
        <label>Video/Audio Recording</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WS_Updt_Dt_MERC__c</fullName>
        <description>Portal activity field to record the date of an update. 
Created by John A Adams 2/18/2014</description>
        <label>Web Service Update Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WS_Updt_HCP_Actn_MERC__c</fullName>
        <description>Portal activity field to record the update action
Created by John A Adams 2/18/2014</description>
        <label>Web Service Update HCP Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WS_Updt_HCP_Global_ID_MERC__c</fullName>
        <description>Portal activity field to record the updated Global ID
Created by John A Adams 2/18/2014</description>
        <label>Web Service Update HCP Global Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WS_Updt_HCP_Name_MERC__c</fullName>
        <description>Portal activity field to record the name of the HCP, to indicate that the HCP was the one to make the change. Created by John A Adams 2/18/2014</description>
        <label>Web Service Update HCP Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Service_Logic_Key_MERC__c</fullName>
        <description>Maps back to the Web Service Logic.Key for Lookup Field for the RSVP Record Type. This then determines a HCPs view of the Meeting Registration Information. Oliver Dunford 13th May 2014.</description>
        <formula>TEXT(Account_MERC__r.Country_of_Residence_GLBL__c) &amp; &quot;;&quot; &amp;
RecordType.Name &amp; &quot;;&quot; &amp;
Account_MERC__r.RecordType.Name &amp; &quot;;&quot; &amp;
	CASE(Meeting_MERC__r.RecordType.Name,
		&quot;Meeting - Forecasted&quot;,&quot;Meeting Standard Process&quot;,
		&quot;Meeting - Registered&quot;, &quot;Meeting Standard Process&quot;,
		&quot;Meeting - Active&quot;, &quot;Meeting Standard Process&quot;, 
		&quot;Meeting - Completed&quot;,&quot;Meeting Standard Process&quot;, 
		&quot;Meeting Program&quot;,&quot;Meeting Standard Process&quot;,
	Meeting_MERC__r.RecordType.Name) &amp; &quot;;&quot; &amp;
TEXT(Hotel_Required_MERC__c) &amp; &quot;;&quot; &amp;
TEXT(Air_Travel_Required_MERC__c) &amp; &quot;;&quot; &amp;
	CASE(Transparency_Reporting_Consent_MERC__c,
		&quot;PERMISSION WITHDRAWN&quot;,&quot;Yes&quot;,
		&quot;PERMISSION GIVEN&quot;,&quot;Yes&quot;,
	&quot;No&quot;) &amp; &quot;;&quot;</formula>
        <inlineHelpText>Maps to the web service logic object to determine a HCPs view of the Meeting Registration Information.</inlineHelpText>
        <label>Web Service Logic Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Locked_Invoices_MERC__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Used by Lookup Rollup Summary Tool to count the number of Locked Invoices/Credit Notes.  Needed to prevent deletion of Locked Invoices/Credit Notes. Created 05/23/2014 by KLorenti, Mavens Consulting</description>
        <label># of Locked Invoices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Meeting Participant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_MERC__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Meeting_MERC__c</columns>
        <columns>Status_MERC__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Service_Providers</fullName>
        <columns>Account_MERC__c</columns>
        <columns>NAME</columns>
        <columns>Meeting_MERC__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Meeting_Participant_MERC__c.MERC_Service_Provider</value>
        </filters>
        <label>Service Providers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MP-{000000}</displayFormat>
        <label>Meeting Participant #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting Participants</pluralLabel>
    <recordTypes>
        <fullName>MERC_Consulting</fullName>
        <active>true</active>
        <description>For Consulting Projects with no meeting and no logistical requirements</description>
        <label>Consulting</label>
    </recordTypes>
    <recordTypes>
        <fullName>MERC_Delegate</fullName>
        <active>true</active>
        <description>A delegate attending a Lilly meeting or an Independent Meeting as a group.</description>
        <label>Delegate</label>
    </recordTypes>
</CustomObject>